Add hover elements for buttons
Add hover elements to a tag buttons

--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,19 @@ html {
 }
 
 .btn-ghost {
-  background-color: limegreen;
+  background-color: transparent;
 }
 
 .btn-light {
   background-color: lightgreen;
   border-color: lightgreen;
+}
+
+.btn:hover {
+  background-color: darkgreen;
+  border-color: darkgreen;
+}
+
+.btn-ghost:hover {
+  background-color: transparent;
 }
